--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,8 @@
 }
 
 button {
-    aspect-ratio: 1;
+    width: 40px;
+    height: 35px;
     padding: .25em;
     font-size: 1.5em;
     border-radius: 10px;
